# token-stats

./: .env.template  .gitignore  Cargo.toml  notes.md
src/: configuration.rs  lib.rs  main.rs  track_blocks.rs
src/helpers/: mod.rs  signature.rs  timestamp.rs
src/inspector/: mod.rs
src/inspector/models/: mod.rs  trace.rs
src/inspector/schemas/: classification.rs
src/mem_pool/: mod.rs
src/pools/: pool.rs
src/providers/: eth_mainnet.rs  mod.rs
src/repo/: binance.rs  ethereum.rs  mod.rs
src/reporting/: discord.rs
