[package]
name = "token_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
hex-literal = "0.4.1"
hmac = "0.12.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive", "serde_derive"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.7"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
