[package]
name = "token_stats"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.8", features = ["rustls", "ws"] }
ethers-providers = { version = "2.0.8", features = ["ws"] }
futures = "0.3.28"
hex-literal = "0.4.1"
hmac = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive", "serde_derive"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.7"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }

# [build-dependencies]
# ethers = "2.0.8"s